# rp-test

./: .release-please-manifest.json  CHANGELOG.md  Cargo.toml  release-please-config.json
.github/workflows/: release-please.yaml
src/: lib.rs
