[package]
name = "rp-test"
version = "0.1.0-dev.1"
edition = "2024"
description = "testing release_plz"
homepage = "https://developer.holochain.org"
documentation = "https://developer.holochain.org"
license = "MIT"
repository = "https://developer.holochain.org"

[dependencies]
num = "0.4.3"
rand = "0.9.0"
